--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>YouTube Clone</title>
-<link rel="stylesheet" href="/YouTube1/styles/general.css">
-<link rel="stylesheet" href="/YouTube1/styles/header.css">
-<link rel="stylesheet" href="/YouTube1/styles/youtube.css">
-<link rel="stylesheet" href="/YouTube1/styles/side-bar.css">
+<link rel="stylesheet" href="styles/general.css">
+<link rel="stylesheet" href="styles/header.css">
+<link rel="stylesheet" href="styles/youtube.css">
+<link rel="stylesheet" href="styles/side-bar.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,64 +16,64 @@
 
   <header class="header">
     <div class="left-section">
-      <img class="hamburger-menu" src="/YouTube1/icons/hamburger-menu.svg">
-      <img class="youtube-logo" src="/YouTube1/icons/youtube-logo.svg">
+      <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+      <img class="youtube-logo" src="icons/youtube-logo.svg">
     </div>
     <div class="middle-section">
       <input class="search-bar" type="text" placeholder="Search">
       <button class="search-button">
-       <img class="search-image" src="/YouTube1/icons/search.svg">
+       <img class="search-image" src="icons/search.svg">
        <div class="tooltip">Search</div>
       </button>
       <button class="voice-button">
-        <img class="voice-image" src="/YouTube1/icons/voice-search-icon.svg">
+        <img class="voice-image" src="icons/voice-search-icon.svg">
         <div class="tooltip">Search with your voice</div>
       </button>
     </div>
     <div class="right-section">
       <div class="upload-container">
-        <img class="upload-icon" src="/YouTube1/icons/upload.svg">
+        <img class="upload-icon" src="icons/upload.svg">
         <div class="tooltip">Create</div>
       </div>
       <div class="apps-container">
-        <img class="apps-icon" src="/YouTube1/icons/youtube-apps.svg">
+        <img class="apps-icon" src="icons/youtube-apps.svg">
         <div class="tooltip">YouTube Apps</div>
       </div>
       <div class="notifications-container">
         <div class="notifications-container">
-          <img class="notifications-icon" src="/YouTube1/icons/notifications.svg">
+          <img class="notifications-icon" src="icons/notifications.svg">
           <div class="tooltip">Notifications</div>
           <div class="notification-count">3</div>
         </div>
       </div>
       
-      <img class="current-user" src="/YouTube1/pfps/my-channel.jpeg">
+      <img class="current-user" src="pfps/my-channel.jpeg">
     </div>
   </header>
 
   <nav class="side-bar">
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/home.svg" alt="">
+      <img src="icons/home.svg" alt="">
       <div>Home</div>
     </div>
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/explore.svg" alt="">
+      <img src="icons/explore.svg" alt="">
       <div>Explore</div>
     </div>
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/subscriptions.svg" alt="">
+      <img src="icons/subscriptions.svg" alt="">
       <div>Subscriptions</div>
     </div>
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/originals.svg" alt="">
+      <img src="icons/originals.svg" alt="">
       <div>Originals</div>
     </div>
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/youtube-music.svg" alt="">
+      <img src="icons/youtube-music.svg" alt="">
       <div>YouTube Music</div>
     </div>
     <div class="sidebar-link">
-      <img src="/YouTube1/icons/library.svg" alt="">
+      <img src="icons/library.svg" alt="">
       <div>Library</div>
     </div>
   </nav>
@@ -82,7 +82,7 @@
     <div class="first-video">
     <div class="thumbnail-row">
       <a href="https://youtu.be/n2RNcPRtAiY">
-        <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-1.webp" alt="Thumbnail">
+        <img class="tb1" src="Thumbnails/thumbnail-1.webp" alt="Thumbnail">
       </a>
     <div class="video-time">14:20</div>
     </div> 
@@ -90,10 +90,10 @@
       <div class="marques-pfp">
         <div class="tooltip-container">
           <a href="https://www.youtube.com/c/mkbhd">
-            <img class="pfp-edit" src="/YouTube1/pfps/channel-1.jpeg" alt="">
+            <img class="pfp-edit" src="pfps/channel-1.jpeg" alt="">
           </a>
           <div class="tooltip">
-            <img class="pfp-tooltip" src="/YouTube1/pfps/channel-1.jpeg" alt="">
+            <img class="pfp-tooltip" src="pfps/channel-1.jpeg" alt="">
             <div class="info-tooltip">
               <div class="channel-tt-name">Marques Brownlee</div>
             <div class="channel-tt-subs">15M Subscribers</div>
@@ -121,7 +121,7 @@
    <div class="first-video">
       <div class="thumbnail-row">
         <a href="https://youtu.be/mP0RAo9SKZk">
-          <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-2.webp" alt="Thumbnail">
+          <img class="tb1" src="Thumbnails/thumbnail-2.webp" alt="Thumbnail">
         </a>
         <div class="video-time">8:22</div>
       </div>
@@ -130,10 +130,10 @@
         <div class="marques-pfp">
           <div class="tooltip-container">
             <a href="https://www.youtube.com/c/markiplier">
-              <img class="pfp-edit" src="/YouTube1/pfps/channel-2.jpeg" alt="">
+              <img class="pfp-edit" src="pfps/channel-2.jpeg" alt="">
             </a>
             <div class="tooltip">
-              <img class="pfp-tooltip" src="/YouTube1/pfps/channel-2.jpeg" alt="">
+              <img class="pfp-tooltip" src="pfps/channel-2.jpeg" alt="">
              <div class="info-tooltip">
                 <div class="channel-tt-name">Markiplier</div>
                 <div class="channel-tt-subs">34M Subscribers</div>
@@ -160,7 +160,7 @@
     <div class="first-video">
       <div class="thumbnail-row">
         <a href="https://youtu.be/FgjPQQeTh1w">
-          <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-3.webp" alt="Thumbnail">
+          <img class="tb1" src="Thumbnails/thumbnail-3.webp" alt="Thumbnail">
         </a>
         <div class="video-time">9:13</div>
         </div>
@@ -169,10 +169,10 @@
           <div class="marques-pfp">
             <div class="tooltip-container">
               <a href="https://www.youtube.com/user/SSSniperWolf">
-                <img class="pfp-edit" src="/YouTube1/pfps/channel-3.jpeg" alt="">
+                <img class="pfp-edit" src="pfps/channel-3.jpeg" alt="">
               </a>
               <div class="tooltip">
-                <img class="pfp-tooltip" src="/YouTube1/pfps/channel-3.jpeg" alt="">
+                <img class="pfp-tooltip" src="pfps/channel-3.jpeg" alt="">
              <div class="info-tooltip">
                 <div class="channel-tt-name">SSSniperWolf</div>
                 <div class="channel-tt-subs">33.1M Subscribers</div>
@@ -201,7 +201,7 @@
       <div class="first-video">
         <div class="thumbnail-row">
           <a href="https://youtu.be/094y1Z2wpJg">
-            <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-4.webp" alt="Thumbnail">
+            <img class="tb1" src="Thumbnails/thumbnail-4.webp" alt="Thumbnail">
           </a>  
           <div class="video-time">22:09</div>
           </div>
@@ -210,10 +210,10 @@
             <div class="marques-pfp">
               <div class="tooltip-container">
                 <a href="https://www.youtube.com/c/veritasium">
-                  <img class="pfp-edit" src="/YouTube1/pfps/channel-4.jpeg" alt="">
+                  <img class="pfp-edit" src="pfps/channel-4.jpeg" alt="">
                 </a>
                 <div class="tooltip">
-                  <img class="pfp-tooltip" src="/YouTube1/pfps/channel-4.jpeg" alt="">
+                  <img class="pfp-tooltip" src="pfps/channel-4.jpeg" alt="">
              <div class="info-tooltip">
                 <div class="channel-tt-name">Veritasium</div>
                 <div class="channel-tt-subs">13.3M Subscribers</div>
@@ -243,7 +243,7 @@
         <div class="first-video">
           <div class="thumbnail-row">
             <a href="https://youtu.be/86CQq3pKSUw">
-              <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-5.webp" alt="Thumbnail">
+              <img class="tb1" src="Thumbnails/thumbnail-5.webp" alt="Thumbnail">
             </a>
             <div class="video-time">11:17</div>
             </div>
@@ -252,10 +252,10 @@
               <div class="marques-pfp">
                 <div class="tooltip-container">
                   <a href="https://www.youtube.com/c/CSDojo">
-                    <img class="pfp-edit" src="/YouTube1/pfps/channel-5.jpeg" alt="">
+                    <img class="pfp-edit" src="pfps/channel-5.jpeg" alt="">
                   </a>
                   <div class="tooltip">
-                    <img class="pfp-tooltip" src="/YouTube1/pfps/channel-5.jpeg" alt="">
+                    <img class="pfp-tooltip" src="pfps/channel-5.jpeg" alt="">
                     <div class="info-tooltip">
                       <div class="channel-tt-name">CS Dojo</div>
                       <div class="channel-tt-subs">1.88M Subscribers</div>
@@ -282,7 +282,7 @@
           <div class="first-video">
             <div class="thumbnail-row">
               <a href="https://youtu.be/yXWw0_UfSFg">
-                <img class="tb1" src="/YouTube1/Thumbnails/thumbnail-6.webp" alt="Thumbnail">
+                <img class="tb1" src="Thumbnails/thumbnail-6.webp" alt="Thumbnail">
               </a>
               <div class="video-time">19:59</div>
               </div>
@@ -291,10 +291,10 @@
             <div class="marques-pfp">
               <div class="tooltip-container">
                 <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
-                  <img class="pfp-edit" src="/YouTube1/pfps/channel-6.jpeg" alt="">
+                  <img class="pfp-edit" src="pfps/channel-6.jpeg" alt="">
                 </a>
                 <div class="tooltip">
-                  <img class="pfp-tooltip" src="/YouTube1/pfps/channel-6.jpeg" alt="">
+                  <img class="pfp-tooltip" src="pfps/channel-6.jpeg" alt="">
                   <div class="info-tooltip">
                     <div class="channel-tt-name">MrBeast</div>
                     <div class="channel-tt-subs">127M Subscribers</div>
